src/oscillators/snapshots/valib__oscillators__blit__tests__blit.snap
---
source: src/oscillators/blit.rs
expression: "&blit"
---
Blit {
    p: 0.0,
    dp: 1.0,
    pmax: 409.6,
    x: 0.0,
}
