src/oscillators/snapshots/valib__oscillators__blit__tests__square_pw.snap
---
source: src/oscillators/blit.rs
expression: "&square"
---
Square {
    blit_pos: Blit {
        p: 0.0,
        dp: 1.0,
        pmax: 409.6,
        x: 0.0,
        fc: 10.0,
        samplerate: 8192.0,
    },
    blit_neg: Blit {
        p: 81.92000000000002,
        dp: 1.0,
        pmax: 409.6,
        x: 0.0,
        fc: 10.0,
        samplerate: 8192.0,
    },
    pw: 0.0,
    integrator_state: 0.1,
}
